force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/Aunt_Bertha_Auth_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This is the auth settings of Aunt Bertha service provider. It stores the username, password and api to make a successful connection to auth bertha service api get a token and make further calls. This is referenced in apex code.</description>
    <label>Aunt Bertha Auth Setting</label>
    <pluralLabel>Aunt Bertha Auth Settings</pluralLabel>
</CustomObject>