force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Key for Aunt Bertha service provider.</description>
    <inlineHelpText>API Key for Aunt Bertha service provider.</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>