force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <description>Currently Aunt Bertha have 2 sets of URL, one for authentication and another for getting all programs. This one is for authentication.</description>
    <inlineHelpText>Currently Aunt Bertha have 2 sets of URL, one for authentication and another for getting all programs. This one is for authentication.</inlineHelpText>
    <label>Hostname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>