force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/fields/Hostname_Program__c.field-meta.xml
<CustomField>
    <fullName>Hostname_Program__c</fullName>
    <description>Currently Aunt Bertha have 2 sets of URL, one for authentication and another for getting all programs. This one is for getting all Programs.</description>
    <inlineHelpText>Currently Aunt Bertha have 2 sets of URL, one for authentication and another for getting all programs. This one is for getting all Programs.</inlineHelpText>
    <label>Hostname Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>