force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for Aunt Bertha service provider.</description>
    <inlineHelpText>Password for Aunt Bertha service provider.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>