force-app/main/default/objects/Aunt_Bertha_Auth_Setting__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for Aunt Bertha service provider.</description>
    <inlineHelpText>Username for Aunt Bertha service provider.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>